Blind shot at fixing the logo z-index

--- a/static/styles.css
+++ b/static/styles.css
@@ -151,7 +151,7 @@ footer {
     /* left: 40em; */
     /* width: 100px; */
     font-family: Menlo, Consolas, monospace;
-    z-index: -1;
+    z-index: 0;
   }
 
   #breadcrumb {
